kubernetes-definitions/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: /hello-world
        backend:
          serviceName: hello-world
          servicePort: 60000
